--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "psr/cache": "^3.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
