feat: enhance PSR implementations and add GitHub Actions for testing
- Updated composer.json to change project type to library and added author information.
- Added .gitignore entry for backup files.
- Updated phpunit.xml to use the latest schema and changed coverage to source.
- Introduced GitHub Actions workflow for automated testing on push and pull requests.
- Enhanced PSR-1, PSR-3, PSR-4, and PSR-6 implementations with detailed PHPDoc comments.
- Added unit tests for UserManager, SmartLogger, and PostController to ensure functionality.

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,31 @@
 {
     "name": "jonesrussell/php-fig-guide",
-    "description": "A practical guide to PHP-FIG standards with examples and best practices",
-    "type": "project",
+    "description": "Implementation examples of PHP-FIG PSR standards",
+    "type": "library",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Russell Jones",
+            "email": "jonesrussell42@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
     "require": {
         "php": ">=8.1",
         "psr/log": "^3.0",
         "psr/cache": "^3.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
-            "JonesRussell\\PhpFigGuide\\": "src/",
+            "JonesRussell\\PhpFigGuide\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "JonesRussell\\PhpFigGuide\\Tests\\": "tests/"
         }
     },
