--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jonesrussell/php-fig-guide",
-    "description": "Implementation examples of PHP-FIG PSR standards",
+    "description": "A practical guide to PHP-FIG standards with examples and best practices",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -12,8 +12,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=8.1",
-        "psr/log": "^3.0",
-        "psr/cache": "^3.0"
+        "psr/http-message": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
