--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=8.2",
-        "psr/http-message": "^2.0"
+        "psr/log": "^3.0",
+        "psr/cache": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
