--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=8.2",
         "psr/log": "^3.0",
-        "psr/cache": "^3.0"
+        "psr/cache": "^3.0",
+        "psr/link": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
